<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="ballot_image_content_desc">ballot image</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives_button">Find my Representatives</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="representative_search">Representative Search</string>
    <string name="voter_address_line1">Address Line 1</string>
    <string name="voter_address_line2">Address Line 2</string>
    <string name="voter_city">City</string>
    <string name="voter_zip">Zip</string>
    <string name="use_my_location_button">Use my Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="election_information">Election Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow_election">Follow Election</string>
    <string name="state_correspondence">State Correspondence Address</string>
    <string name="permission_denied_explanation">You need to grant location permission</string>
    <string name="settings">Settings</string>
    <string name="location_required_error">Location services must be enabled to use this feature</string>

    <!-- TODO: Add necessary string values -->

</resources>
